--- a/custom-range-slider/index.html
+++ b/custom-range-slider/index.html
@@ -7,7 +7,7 @@
     <title>Custom Range Slider</title>
   </head>
   <body>
-    <h2>Custom Range Slider - Tigo</h2>
+    <h2>Custom Range Slider - Tigo1</h2>
     <div class="range-container">
       <input type="range" id="range" min="0" max="100">
       <label for="range">50</label>
